Closed Bug 1175656 Opened 10 years ago Closed 10 years ago

[B2G][Gecko] Flame: videos recorded by camera app is not shown in gallery app

Categories

(Firefox OS Graveyard :: Gaia::Camera, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox41 fixed)

RESOLVED FIXED
FxOS-S1 (26Jun)
Tracking Status
firefox41 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

Details

Attachments

(1 file, 2 obsolete files)

File duplicate of bug 1164200 to track the gecko changes which must land first (otherwise camera recording will be unusable). Add feature to Gecko to create the poster image for video files on behalf of the application.
Blocks: 1164200
Assignee: nobody → aosmond
Status: NEW → ASSIGNED
Attached patch Implement Gecko posters, v1 (obsolete) — Splinter Review
Attached patch Implement Gecko posters, v1.1 (obsolete) — Splinter Review
Fix a build breakage on mulet (if camera enabled). Tested on aries as well as flame (high and low memory configurations), all seems to be working. try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=e5ff66eb399b
Attachment #8623857 - Attachment is obsolete: true
Attachment #8623916 - Flags: review?(dhylands)
Comment on attachment 8623916 [details] [diff] [review] Implement Gecko posters, v1.1 Review of attachment 8623916 [details] [diff] [review]: ----------------------------------------------------------------- lgtm - just one question about already_AddRefed ::: dom/camera/CameraControlImpl.cpp @@ +177,5 @@ > } > } > > void > +CameraControlImpl::OnPoster(already_AddRefed<dom::BlobImpl> aBlobImpl) Shouldn't this be a bare pointer? https://developer.mozilla.org/en-US/docs/Using_nsCOMPtr/Getting_Started_Guide says "void f( nsCOMPtr<T> ) don't pass an nsCOMPtr by value" I viewed aleady_AddRefed as a variant of that.
Attachment #8623916 - Flags: review?(dhylands) → review+
bz, can you review the WebIDL bits? (In reply to Dave Hylands [:dhylands] from comment #3) > Comment on attachment 8623916 [details] [diff] [review] > Implement Gecko posters, v1.1 > > Review of attachment 8623916 [details] [diff] [review]: > ----------------------------------------------------------------- > > lgtm - just one question about already_AddRefed > > ::: dom/camera/CameraControlImpl.cpp > @@ +177,5 @@ > > } > > } > > > > void > > +CameraControlImpl::OnPoster(already_AddRefed<dom::BlobImpl> aBlobImpl) > > Shouldn't this be a bare pointer? > https://developer.mozilla.org/en-US/docs/Using_nsCOMPtr/ > Getting_Started_Guide says "void f( nsCOMPtr<T> ) don't pass an nsCOMPtr by > value" > > I viewed aleady_AddRefed as a variant of that. Ah, originally I did it think I would avoid a refcount increase but you are right. I should pass the raw pointer because it doesn't save us anything due to the extra layer of indirection (i.e. I can't .forget to the next listener).
Attachment #8623916 - Attachment is obsolete: true
Attachment #8624561 - Flags: review?(bzbarsky)
Attachment #8624561 - Attachment description: Implement Gecko posters, v1.2 → Implement Gecko posters, v1.2 [carries r=dhylands]
Comment on attachment 8624561 [details] [diff] [review] Implement Gecko posters, v1.2 [carries r=dhylands] r=me on the webidl bit
Attachment #8624561 - Flags: review?(bzbarsky) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S1 (26Jun)
Depends on: 1211032
In bug 1211032, we found that this change caused a large UI responsiveness regression. It is a blocker for 2.5.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: