Bug 1175656 - Implement generation of recording posters in Gecko. r=dhylands,bz